2008-09-24  Christian Dywan  <christian@imendio.com>

	Bug 541391 – Unfocussable Treeview swallows focus

	* gtk/gtktreeview.c (grab_focus_and_unset_draw_keyfocus),
	(gtk_tree_view_focus): Honor GTK_WIDGET_CAN_FOCUS properly

2008-09-24  Denis Washington  <denisw@svn.gnome.org>

	* gtk/gtkiconview.c: draw focus as a rectangle around the
	complete item, not just the text. (Bug #38254)

2008-09-23  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkobject.c
	* gtk/gtksignal.[ch]: s/GtkType/GType/ and
	s/GtkSignalMarshaller/GSignalCMarshaller/.

2008-09-23  Michael Natterer  <mitch@imendio.com>

	* gdk/x11/gdkevents-x11.c (gdk_event_translate): remove unused
	variable and fix indentation.

2008-09-23  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkclist.h
	* gtk/gtkctree.h
	* gtk/gtklist.h
	* gtk/gtklistitem.h
	* gtk/gtkobject.h
	* gtk/gtkoldeditable.h
	* gtk/gtkpixmap.h
	* gtk/gtkpreview.h
	* gtk/gtktext.h
	* gtk/gtktipsquery.h
	* gtk/gtktree.h
	* gtk/gtktreeitem.h: get rid of GtkType and GTK_CHECK_FOO() also
	in all deprecated headers.

2008-09-22  Matthias Clasen  <mclasen@redhat.com>

	Bug 553135 – eog crash: assertion failed. Gtk error:
	shortcuts_remove_rows: code should not be reached

	* gtk/gtkfilechooserdefault.c: Disconnect from GtkFileSystem 
	signals when we are destroyed, in order to avoid nasty surprises.
	Patch by Claudio Saavedra

2008-09-22  Emmanuele Bassi  <ebassi@linux.intel.com>

	Bug 552789 – Show size column in the search and recently used
	files modes

	* gtk/gtkfilechooserdefault.c: Display the file size column
	when in OPERATION_MODE_SEARCH. This removes a stat() call
	and simplifies the code a little bit by changing the query
	for file informations for each search engine hit.

2008-09-22  Michael Natterer  <mitch@imendio.com>

	* gtk/gtksignal.[ch]
	* gtk/gtkclist.c
	* gtk/gtklist.c
	* gtk/gtkmain.c
	* gtk/gtktext.c
	* gtk/gtktreeitem.c: use G_CALLBACK and GCallback instead of
	GTK_SIGNAL_FUNC and GtkSignalFunc also in deprecated code.
